# bard

./: .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENCE  README.md
crates/bard/: Cargo.toml
crates/bard/src/: main.rs
crates/bard/src/terminal/: render.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/lyrics/: display.rs  fetcher.rs  mod.rs  parser.rs
crates/shared/src/models/: lyrics.rs  song.rs
crates/shared/src/player/: fetcher.rs
crates/shared/src/tidal/: fetcher.rs
crates/waybar-bard/: Cargo.toml
crates/waybar-bard/src/: main.rs
crates/waybar-bard/src/waybar/: mod.rs  render.rs
dms-bard/: MyWidget.qml  plugin.json
