[package]
name = "shared"
version = "0.9.0"
edition = "2024"
description = "Shared functionality for bard"
authors = ["Guilherme Puszkarek"]
license = "MIT"

[dependencies]
# Config and basic utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0.0"

# For API interactions
# tokio = { version = "1.44.2", features = ["full"] }
# reqwest = "0.12.15"

# For lyrics manipulation
regex = "1.5"
lofty = "0.22.2"
mpris = "2.0.1"
