[package]
name = "waybar-bard"
version = "0.9.0"
edition = "2024"
description = "Waybar integration for displaying lyrics"
authors = ["wind_mask","Guilherme Puszkarek"]
license = "MIT"

[dependencies]
# Reference the shared crate
shared = { path = "../shared" }

# Waybar specific dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
signal-hook = "0.4"
mpris = "2.0.1"
